<resources>
    <string name="app_name">RegistrationTC</string>
    <string name="review_data">Review Data</string>
    <string name="alamat_ktp">Alamat KTP</string>
    <string name="data_diri">Data Diri</string>
    <string name="submit">Submit</string>
    <string name="national_id">National ID</string>
    <string name="fullname">Fullname</string>
    <string name="bank_account">Bank Account</string>
    <string name="education">Education</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="required">* Required</string>
    <string name="domicile">Domicile Address</string>
    <string name="housing_type">Housing Type</string>
    <string name="province">Province</string>
    <string name="no">No</string>
    <string name="review_data_user">Review Data User</string>
    <string name="address">Address</string>
</resources>